--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7"
+  },
+  "engines": {
+    "node": ">=14.20.0"
   }
 }
